[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "attemptpkg"
version = "0.1.0"
description = "Jane's custom attempt Python package"
authors = [{ name = "Jane" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

